# onfido-googly-eye-api

./: .gitignore  README.md  pyproject.toml
eyegoogler/api/: config.py  lifespan.py  main.py  util.py
eyegoogler/model/: eye_detector.py  googly_eye_generator.py  overlay.py
tests/: conftest.py  test_eye_detector.py  test_googly_eye_generator.py
